roles/servers/files/10.32.16.245/iptables
# Generated by iptables-save v1.3.5 on Mon Apr  1 15:17:09 2013
*filter
:INPUT DROP [72:5616]
:FORWARD DROP [0:0]
:OUTPUT DROP [44:4912]
:LOGGING - [0:0]

#default policy for input
-A INPUT -i lo -j ACCEPT
-A INPUT -i eth1 -p tcp -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -i eth1 -p udp -m state --state ESTABLISHED,RELATED -j ACCEPT

# Allow incoming and outgoing ssh
-A INPUT -i eth1 -p tcp -s 10.32.5.0/24 --dport 22 -m state --state NEW -j ACCEPT
-A INPUT -i eth1 -p tcp -s 10.32.100.18 --dport 22 -m state --state NEW -j ACCEPT
-A INPUT -i eth1 -p tcp -s 10.32.16.180 --dport 22 -m state --state NEW -j ACCEPT
-A INPUT -i eth1 -p tcp -s 10.32.16.179 --dport 22 -m state --state NEW -j ACCEPT
-A OUTPUT -o eth1 -p tcp --dport 22 -m state --state NEW -j ACCEPT

#Allow incoming/outgoing ICMP
-A INPUT -i eth1 -p icmp -m limit --limit 2/min --limit-burst 5 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -o eth1 -p icmp -m state --state NEW,ESTABLISHED -j ACCEPT

#Allow incoming/outgoing HTTP/S access
-A INPUT -i eth1 -p tcp --dport 80 -m state --state NEW -j ACCEPT
-A INPUT -i eth1 -p tcp --dport 443 -m state --state NEW -j ACCEPT
-A OUTPUT -o eth1 -p tcp --dport 80 -m state --state NEW -j ACCEPT
-A OUTPUT -o eth1 -p tcp --dport 443 -m state --state NEW -j ACCEPT

#Allow incoming monit access
-A INPUT -i eth1 -p tcp --dport 2812 -m state --state NEW,ESTABLISHED -j ACCEPT

#Allow incoming SNMP request
-A INPUT -i eth1 -p udp -s 10.32.16.180 --dport 161 -m state --state NEW -j ACCEPT
-A INPUT -i eth1 -p udp -s 10.32.16.181 --dport 161 -m state --state NEW -j ACCEPT
-A INPUT -i eth1 -p udp -s 10.32.16.179 --dport 161 -m state --state NEW -j ACCEPT

#Allow Incoming mysql from Cirebon
#-A INPUT -i eth1 -p tcp -s 10.32.100.25 --dport 3306 -m state --state NEW -j ACCEPT
-A INPUT -i eth1 -p tcp -s 10.32.100.25 --dport 3306 -m state --state NEW -j ACCEPT
-A INPUT -i eth1 -p tcp -s 10.32.100.18 --dport 3306 -m state --state NEW -j ACCEPT

# Allow incoming from sysmon mysql
-A INPUT -i eth1 -p tcp -s 10.32.16.179 --dport 3306 -m state --state NEW -j ACCEPT

# Allow Incoming from DEV
-A INPUT -i eth1 -p tcp -s 10.32.14.0/24 --dport 3306 -m state --state NEW -j ACCEPT

#Allow access proxy server
-A OUTPUT -o eth1 -p tcp -d 10.32.16.22 --dport 3128 -m state --state NEW -j ACCEPT

#Allow access LDAP server
-A OUTPUT -o eth1 -p tcp -d 10.32.16.241 --dport 389 -m state --state NEW -j ACCEPT

#Allow access DNS server and NTP and SYSLOG-NG
-A OUTPUT -o eth1 -p udp -d 10.32.16.238 --dport 53 -m state --state NEW -j ACCEPT
-A OUTPUT -o eth1 -p udp -d 10.32.16.238 --dport 123 -m state --state NEW -j ACCEPT
-A OUTPUT -o eth1 -p tcp -d 10.32.100.25 --dport 11 -m state --state NEW -j ACCEPT


#Allow access Singasari SMTP
-A OUTPUT -o eth1 -p tcp -d 10.32.16.179 --dport 25 -m state --state NEW -j ACCEPT

#default policy for output
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -o eth1 -p tcp -m state --state ESTABLISHED -j ACCEPT
-A OUTPUT -o eth1 -p udp -m state --state ESTABLISHED -j ACCEPT

#default policy for LOGGING
-A INPUT -j LOGGING
-A LOGGING -j LOG --log-prefix "IPTables Packet Dropped: " --log-level 7
-A LOGGING -j DROP

COMMIT
# Completed on Mon Apr  1 15:17:09 2013
